# bollette

./: .replit  README.md  app.py  models.py  pyproject.toml  replit.nix  utils.py
static/css/: style.css
static/js/: main.js  tesseract-worker.js
templates/: analysis.html  base.html  index.html
